--- a/coming soon rtl .html
+++ b/coming soon rtl .html
@@ -36,7 +36,7 @@
     
     </style>
   </head>
-  <body>
+  <body dir="rtl">
     <header class="header">
       <div class="header__content-container">
         <div class="header__logo-container">
@@ -84,7 +84,7 @@
           </div>
           <div class="content-404__description">
             <p style="font-size: larger;" class="content-404__title">We are Coming Soon</p>
-            <p style="color: gray;" class="content-404__detail">
+            <p dir="ltr" style="color: gray;" class="content-404__detail">
                 We are almost there! If you want to get notified when the website goes live, subscribe to our mailing list!
             </p>
             <br>
@@ -96,12 +96,12 @@
 
           </div>
           <div class="content-404__btn-container">
-            <a style="padding: 15px 20px;"  href="#" class="btn">NOTIFY ME!</a>
+            <a dir="ltr" style="padding: 15px 20px;"  href="#" class="btn">NOTIFY ME!</a>
           </div>
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer  class="footer">
         <div class="footer__container">
           <div class="footer__top">
             <p>Home / Coming soon page</p>
@@ -157,7 +157,7 @@
               <p>2020 Wedding by Formatika Studio</p>
             </div>
                 <div class="footer__bottom-contact">
-                  <img src="assets/image/footer/entypo_phone.png" alt="" />
+                  <img dir="rtl" src="assets/image/footer/entypo_phone.png" alt="" />
                   <p>0832-2131-3849</p>
                 </div>
                 <div class="footer__bottom-contact">
